list of buildings by map point & rectangle
